Completed Export event (i guess)

--- a/FontCraft/FontCraft.csproj
+++ b/FontCraft/FontCraft.csproj
@@ -4,7 +4,11 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <ApplicationIcon>icon-8.ico</ApplicationIcon>
+    <ApplicationIcon>icon-8(2).ico</ApplicationIcon>
+    <Version>0.1.1</Version>
+    <Authors>Ian Ardian</Authors>
+    <Company>yansaan</Company>
+    <Copyright>yansaan</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
